--- a/estoque/templates/add_produto.html
+++ b/estoque/templates/add_produto.html
@@ -1,44 +1,82 @@
-<form action="{% url 'add_produto' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
+{% extends 'base.html' %}
+{% load filters %}
 
-    <label>Imagem:</label>
-    <input type="file" name="imagens" multiple>
+{% block 'body' %}
+<div class="container">
+    {% if messages %}
     <br>
-    <br>
+    {% for message in messages %}
+    <div class="alert {{message.tags}}">{{message}}</div>
+    {% endfor %}
+    {% endif %}
+    <form action="{% url 'add_produto' %}" method="POST" enctype="multipart/form-data"> {% csrf_token %}
 
-    <label>Nome:</label>
-    <input type="text" name="nome">
+        <br>
+        <label>Imagem:</label>
+        <input class="form-control" type="file" name="imagens" multiple>
+        <br>
+        <br>
 
-    <br>
-    <br>
+        <label>Nome:</label>
+        <input class="form-control" type="text" name="nome">
 
-    <label>Selecione a categoria do Produto</label>
-    <select name="categoria">
-        {% for categoria in categorias %}
-        <option value="{{categoria.id}}">{{categoria.titulo}}</option>
+        <br>
+        <br>
+
+        <label>Selecione a categoria do Produto</label>
+        <select class="form-control" name="categoria">
+            {% for categoria in categorias %}
+            <option value="{{categoria.id}}">{{categoria.titulo}}</option>
+            {% endfor %}
+        </select>
+
+        <br>
+        <br>
+
+        <label>Estoque inicial:</label>
+        <input class="form-control" type="number" name="quantidade">
+
+        <br>
+        <br>
+
+        <label>Preço de compra:</label>
+        <input class="form-control" type="number" name="preco_compra">
+
+        <br>
+        <br>
+
+        <label>Preço de venda:</label>
+        <input class="form-control" type="number" name="preco_venda">
+
+        <br>
+        <br>
+
+        <input class="btn btn-success" type="submit" value="Enviar" id="">
+
+    </form>
+
+    <hr style="background-color: gray;">
+
+    <div class="listar_produtos">
+        {% for produto in produtos %}
+        <div style="background-color: #0f0f0f" class="card" style="width: 18rem;">
+            {% if produto|get_first_image %}
+            <img width="100%" class="card-img-top" src="{{produto|get_first_image}}">
+            {% endif %}
+            <div class="card-body">
+                <h5 class="card-title">{{produto.nome}}</h5>
+                <span class="badge badge-info">{{produto.categoria}}</span>
+                <br>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's
+                    content.</p>
+                <a href="#" class="btn btn-primary">Acessar</a>
+            </div>
+        </div>
+        <br>
         {% endfor %}
-    </select>
+    </div>
 
-    <br>
-    <br>
+</div>
 
-    <label>Estoque inicial:</label>
-    <input type="number" name="quantidade">
-
-    <br>
-    <br>
-
-    <label>Preço de compra:</label>
-    <input type="number" name="preco_compra">
-
-    <br>
-    <br>
-
-    <label>Preço de venda:</label>
-    <input type="number" name="preco_venda">
-
-    <br>
-    <br>
-
-    <input type="submit" value="Enviar" id="">
-
-</form>
+{% endblock %}
