--- a/estoque/templates/add_produto.html
+++ b/estoque/templates/add_produto.html
@@ -58,23 +58,28 @@
     <hr style="background-color: gray;">
 
     <div class="listar_produtos">
-        {% for produto in produtos %}
-        <div style="background-color: #0f0f0f" class="card" style="width: 18rem;">
-            {% if produto|get_first_image %}
-            <img width="100%" class="card-img-top" src="{{produto|get_first_image}}">
-            {% endif %}
-            <div class="card-body">
-                <h5 class="card-title">{{produto.nome}}</h5>
-                <span class="badge badge-info">{{produto.categoria}}</span>
+        <div class="row">
+            {% for produto in produtos %}
+            <div class="col-md">
+                <div style="background-color: #0f0f0f; width: 18rem" class="card" style="width: 18rem;">
+                    {% if produto|get_first_image %}
+                    <img width="100%" class="card-img-top" src="{{produto|get_first_image}}">
+                    {% endif %}
+                    <div class="card-body">
+                        <h5 class="card-title">{{produto.nome}}</h5>
+                        <span class="badge badge-info">{{produto.categoria}}</span>
+                        <br>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's
+                            content.</p>
+                        <a href="{% url 'produto' produto.slug %}" class="btn btn-primary">Acessar</a>
+                    </div>
+                </div>
                 <br>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's
-                    content.</p>
-                <a href="#" class="btn btn-primary">Acessar</a>
             </div>
+            {% endfor %}
         </div>
-        <br>
-        {% endfor %}
     </div>
 
 </div>
